--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Annet Meditatie
-description: Meditatie en schilderen: Tijd voor jezelf
+description: Meditatie en schilderen Tijd voor jezelf
 theme: jekyll-theme-minimal
