added Gemfile for local building

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Annet Meditatie
 description: "Meditatie en schilderen: Tijd voor jezelf"
 theme: jekyll-theme-minimal
+show_downloads: false
