--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Annet Meditatie
 description: "Meditatie en schilderen: Tijd voor jezelf"
 theme: jekyll-theme-minimal
-show_downloads: false
+footer: "Annet Meditatie: annetmeditatie@outlook.com 06-12345678"
