changed phone number and added logo in config

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-title: ""
+title: "Annet Meditatie"
 description: ""
+logo: img/logo.png
 theme: jekyll-theme-minimal
-footer: "Annet Meditatie: annetmeditatie@outlook.com 06-12345678"
+footer: "Annet Meditatie: annetmeditatie@outlook.com 06-30730145"
