--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,6 @@ title: "Annet Meditatie"
 description: ""
 logo: img/logo.png
 theme: jekyll-theme-minimal
-footer: "Annet Meditatie: annetmeditatie@outlook.com 06-30730145"
+footer: Annet Meditatie
+email: annetmeditatie@outlook.com
+tel: 06-30730145
